# Chat-App-Fast-API

./: BUG_FIXES.md  DEBUG_FIXES.md  README.md  REALTIME_FIXES.md  SETUP_GUIDE.md  chat_app.db  pyproject.toml  test.db  test_ws.py
Server/app/: database.py  main.py  message_router.py  models.py  websocket_manager.py
Server/client/static/: dashboard.html  index.html  login.html
Server/data/: chat.db
alembic/: env.py
alembic/versions/: dbef25d57453_initial_migration.py
app/: main.py
