[project]
name = "web-socket-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.27.0",
]
